gateway/gateway.yml
# Ingress Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*" # "site.com.br"
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: 
  # - nginx-service
  - "*"
  gateways:
    - "ingress-gateway"
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: nginx-service
          subset: v1

    - match:
      - uri:
          prefix: "/b"
      route:
      - destination:
          host: nginx-service
          subset: v2

    # - route:
    #   - destination:
    #       host: nginx-service
    #       subset: v1
    #     weight: 1
    #   - destination:
    #       host: nginx-service
    #       subset: v2
    #     weight: 99
---
# Destination Rule
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
      labels:
        app: nginx
        version: A
    - name: v2
      labels:
        app: nginx
        version: B
